discount section done

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="hero-overlay bg-opacity-10"></div>
         <div class="hero-content text-center text-neutral-content">
           <div class="lg:w-4/5 w-full">
-            <h1 class=" text-6xl font-bold text-white">End-to-End Travel with <br><span class="text-[#1DD100]">Ena Paribahan</span></h1>
+            <h1 class=" lg:text-6xl text-3xl font-bold text-white">End-to-End Travel with <br><span class="text-[#1DD100]">Ena Paribahan</span></h1>
             <p class="mb-5">hey this is ena poribohon online ticket counter .here you can by ticket on online every single persone can by only four ticket</p>
             <button class="btn font-bold bg-[#1DD100] hover:bg-[#1DD100] border-none">Buy Tickets</button>
           </div>
@@ -90,11 +90,46 @@
         </div>
       </div>
     </div>
-      
-
-
     </head>
-    <main></main>
+    <main>
+      <!-- best offers -->
+      <div class="w-11/12 mx-auto py-12 mt-14">
+        <h1 class="text-4xl font-bold text-center my-20">Best offers for you</h1>
+        <div class="grid lg:grid-cols-2 grid-cols-1 gap-6">
+          <!-- frist discount  -->
+          <div class="flex bg-[#FFBF0F] px-14 items-center rounded-lg">
+            <div class="pr-9">
+              <h1 class="font-extrabold text-4xl">15% OFF</h1>
+              <h3 class="text-2xl font-bold"> on your next purchase</h3>
+              <p class="text-xl font-semibold">use by January 2024</p>
+            </div>
+            <div>
+              <img src="images/cupon-devider.png" alt="">
+            </div>
+            <div class="">
+              <h1 class="font-extrabold text-4xl">NEW15</h1>
+              <p class="text-2xl font-semibold"> Coupon Code</p>
+            </div>
+          </div>
+          <!-- secound discount  -->
+          <div class="flex bg-[#F78C9C] px-14 items-center rounded-lg">
+            <div class="pr-9">
+              <h1 class="font-extrabold text-4xl">20% OFF</h1>
+              <h3 class="text-2xl font-bold"> on your next purchase</h3>
+              <p class="text-xl font-semibold">use by January 2024</p>
+            </div>
+            <div>
+              <img src="images/cupon-devider.png" alt="">
+            </div>
+            <div class="">
+              <h1 class="font-extrabold text-4xl">Couple 20</h1>
+              <p class="text-2xl font-semibold">  Coupon Code</p>
+            </div>
+          </div>
+        </div>
+        <button class="btn px-8 my-20 mx-auto block bg-transparent hover:bg-transparent border-2 border-[#1DD10066] hover:border-[#1DD10066] text-[#1DD100] font-bold rounded-lg">See All Offers</button>
+      </div>
+    </main>
     <footer></footer>
     
 
