--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a>Search</a></li>
               </ul>
             </div>
-            <a class=" text-3xl raleway font-extrabold">Ena-Ticket</a>
+            <a class=" lg:text-3xl text-xl raleway font-extrabold">Ena-Ticket</a>
           </div>
           <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
@@ -53,7 +53,7 @@
           <div class="lg:w-4/5 w-full">
             <h1 class=" lg:text-6xl text-3xl font-bold text-white">End-to-End Travel with <br><span class="text-[#1DD100]">Ena Paribahan</span></h1>
             <p class="mb-5">hey this is ena poribohon online ticket counter .here you can by ticket on online every single persone can by only four ticket</p>
-            <a href="#selectYouredSeat"><button class="btn font-bold bg-[#1DD100] hover:bg-[#1DD100] border-none">Buy Tickets</button></a>
+            <a href="#selectYouredSeat"><button class="btn font-bold bg-[#1DD100] hover:bg-[#1DD100] border-none text-white">Buy Tickets</button></a>
           </div>
         </div>
         </div>
@@ -97,11 +97,11 @@
         <h1 class="text-4xl font-bold text-center my-20">Best offers for you</h1>
         <div class="grid lg:grid-cols-2 grid-cols-1 gap-6">
           <!-- frist discount  -->
-          <div class="flex bg-[#FFBF0F] px-14 items-center rounded-lg">
-            <div class="pr-9">
-              <h1 class="font-extrabold text-4xl">15% OFF</h1>
-              <h3 class="text-2xl font-bold"> on your next purchase</h3>
-              <p class="text-xl font-semibold">use by January 2024</p>
+          <div class="flex bg-[#FFBF0F] lg:px-14 px-2 items-center rounded-lg">
+            <div class="lg:pr-9 pr-1">
+              <h1 class="font-extrabold lg:text-4xl text-2xl">15% OFF</h1>
+              <h3 class="lg:text-2xl text-lg font-bold"> on your next purchase</h3>
+              <p class="lg:text-xl text-lg font-semibold">use by January 2024</p>
             </div>
             <div>
               <img src="images/cupon-devider.png" alt="">
@@ -112,11 +112,11 @@
             </div>
           </div>
           <!-- secound discount  -->
-          <div class="flex bg-[#F78C9C] px-14 items-center rounded-lg">
-            <div class="pr-9">
-              <h1 class="font-extrabold text-4xl">20% OFF</h1>
-              <h3 class="text-2xl font-bold"> on your next purchase</h3>
-              <p class="text-xl font-semibold">use by January 2024</p>
+          <div class="flex bg-[#F78C9C] lg:px-14 px-2 items-center rounded-lg">
+            <div class="lg:pr-9 pr-1">
+              <h1 class="font-extrabold lg:text-4xl text-2xl">20% OFF</h1>
+              <h3 class="lg:text-2xl text-xl font-bold"> on your next purchase</h3>
+              <p class="lg:text-xl text-lg font-semibold">use by January 2024</p>
             </div>
             <div>
               <img src="images/cupon-devider.png" alt="">
@@ -133,8 +133,8 @@
      <div class="bg-[#F7F8F8] p-6 border-t-2 rounded-t-[88px] border-[#1DD10066]">
       <div class="lg:w-4/5 w-full mx-auto">
         <div class="text-center py-20">
-          <h1 class="text-4xl font-bold ">Ena Paribahan</h1>
-          <p class="mb-5">hey this is ena poribohon online ticket counter .here you can by ticket on online every single <br> persone can by only four ticket</p>
+          <h1 class="lg:text-4xl text-xl font-bold ">Ena Paribahan</h1>
+          <p class="mb-5 text-sm">hey this is ena poribohon online ticket counter .here you can by ticket on online every single <br> persone can by only four ticket</p>
         </div>
         <div class="bg-white flex flex-col lg:flex-row justify-between items-center rounded-3xl">
           <div class=" lg:w-3/4 w-full  p-11 border-r-2 border-[#1DD10066]">
@@ -142,12 +142,12 @@
               <div class="flex gap-6 mb-4">
                 <img src="images/bus-logo.png" alt="">
                 <div>
-                  <h3 class="text-3xl font-bold">Greenline Paribahan</h3>
-                  <p class="text-xl font-semibold">Coach-009-WEB ! AC_Business</p>
+                  <h3 class="lg:text-3xl text-xl font-bold">Greenline Paribahan</h3>
+                  <p class="lg:text-xl text-lg font-semibold">Coach-009-WEB ! AC_Business</p>
                 </div>
               </div>
              
-              <button class="btn bg-[#1DD10026] hover:bg-[#1DD10026] border-1 border-[#1DD10066] hover:border-[#1DD10066] text-[#1DD100] font-bold text-xl">
+              <button class="btn flex gap-1 bg-[#1DD10026] hover:bg-[#1DD10026] border-1 border-[#1DD10066] hover:border-[#1DD10066] text-[#1DD100] font-bold lg:text-xl text-lg">
                 <img src="images/seat-green-filled.png" alt="">
                 <span id="left">40</span>
                 <p>seats left</p>
@@ -204,70 +204,178 @@
               <p class=" text-xl font-semibold rounded-lg text-gray-500  py-4 px-1 ">A</p>
             </div>
             <div class="A1">
-              <p class="seat text-xl font-semibold  py-2 lg:px-8 px-4 rounded-lg text-gray-500 bg-[#F7F8F8] ">A1</p>
+              <button  class="seat text-xl font-semibold  py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8] ">A1</button>
             </div>
             <div class="A2">
-              <p class="seat text-xl font-semibold  py-2 lg:px-8 px-4 rounded-lg text-gray-500 bg-[#F7F8F8]">A2</p>
+              <button class="seat text-xl font-semibold  py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8]">A2</button>
             </div>
             <div class="A3">
-              <p class="seat text-xl font-semibold   py-2 lg:px-8 px-4 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">A3</p>
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">A3</button>
             </div>
             <div class="A4">
-              <p class="seat text-xl font-semibold   py-2 lg:px-8 px-4 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">A4</p>
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">A4</button>
             </div>
            </div>
            <!-- secound seat  -->
            <div class="flex justify-between lg:gap-5 gap-2 my-1" >
             <div class="B">
-              <p class=" text-xl font-semibold rounded-lg text-gray-500  py-4 px-1 ">B</p>
+              <button class=" text-xl font-semibold rounded-lg text-gray-500  py-4 px-1 ">B</button>
             </div>
             <div class="B1">
-              <p class="seat text-xl font-semibold   py-2 lg:px-8 px-4 rounded-lg text-gray-500 bg-[#F7F8F8] ">B1</p>
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8] ">B1</button>
             </div>
             <div class="B2">
-              <p class="seat text-xl font-semibold   py-2 lg:px-8 px-4 rounded-lg text-gray-500 bg-[#F7F8F8]">B2</p>
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8]">B2</button>
             </div>
             <div class="B3">
-              <p class="seat text-xl font-semibold   py-2 lg:px-8 px-4 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">B3</p>
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">B3</button>
             </div>
             <div class="B4">
-              <p class="seat text-xl font-semibold   py-2 lg:px-8 px-4 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">B4</p>
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">B4</button>
             </div>
            </div>
            <!-- third seat  -->
            <div class="flex justify-between lg:gap-5 gap-2 my-1" >
             <div class="C">
-              <p class=" text-xl font-semibold rounded-lg text-gray-500  py-4 px-1 ">C</p>
+              <button class=" text-xl font-semibold rounded-lg text-gray-500  py-4 px-1 ">C</button>
             </div>
             <div class="C1">
-              <p class="seat text-xl font-semibold  py-2 lg:px-8 px-4 rounded-lg text-gray-500 bg-[#F7F8F8] ">C1</p>
+              <button class="seat text-xl font-semibold  py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8] ">C1</button>
             </div>
             <div class="C2">
-              <p class="seat text-xl font-semibold   py-2 lg:px-8 px-4 rounded-lg text-gray-500 bg-[#F7F8F8]">C2</p>
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8]">C2</button>
             </div>
             <div class="C3">
-              <p class="seat text-xl font-semibold   py-2 lg:px-8 px-4 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">C3</p>
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">C3</button>
             </div>
             <div class="C4">
-              <p class="seat text-xl font-semibold  py-2 lg:px-8 px-4 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">C4</p>
+              <button class="seat text-xl font-semibold  py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">C4</button>
             </div>
            </div>
            <!-- fourth seat  -->
            <div class="flex justify-between lg:gap-5 gap-2 my-1" >
             <div class="D">
-              <p class=" text-xl font-semibold rounded-lg text-gray-500  py-4 p-1 ">D</p>
+              <button class=" text-xl font-semibold rounded-lg text-gray-500  py-4 p-1 ">D</button>
             </div>
             <div class="D1">
-              <p  class="seat text-xl font-semibold   py-2 lg:px-8 px-4 rounded-lg text-gray-500 bg-[#F7F8F8] ">D1</p>
+              <button  class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8] ">D1</button>
             </div>
             <div class="D2">
-              <p class="seat text-xl font-semibold   py-2 lg:px-8 px-4 rounded-lg text-gray-500 bg-[#F7F8F8]">D2</p>
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8]">D2</button>
             </div>
             <div class="D3">
-              <p class="seat text-xl font-semibold   py-2 lg:px-8 px-4 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">D3</p>
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">D3</button>
             </div>
             <div class="D4">
-              <p class="seat text-xl font-semibold   py-2 lg:px-8 px-4 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">D4</p>
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">D4</button>
+            </div>
+           </div>
+           <!-- figth seat  -->
+           <div class="flex justify-between lg:gap-5 gap-2 my-1" >
+            <div class="E">
+              <button class=" text-xl font-semibold rounded-lg text-gray-500  py-4 p-1 ">E</button>
+            </div>
+            <div class="E1">
+              <button  class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8] ">E1</button>
+            </div>
+            <div class="E2">
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8]">E2</button>
+            </div>
+            <div class="E3">
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">E3</button>
+            </div>
+            <div class="E4">
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">E4</button>
+            </div>
+           </div>
+           <!-- six seat  -->
+           <div class="flex justify-between lg:gap-5 gap-2 my-1" >
+            <div class="F">
+              <button class=" text-xl font-semibold rounded-lg text-gray-500  py-4 p-1 ">F</button>
+            </div>
+            <div class="F1">
+              <button  class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8] ">F1</button>
+            </div>
+            <div class="F2">
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8]">F2</button>
+            </div>
+            <div class="F3">
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">F3</button>
+            </div>
+            <div class="F4">
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">F4</button>
+            </div>
+           </div>
+           <!-- saven seat  -->
+           <div class="flex justify-between lg:gap-5 gap-2 my-1" >
+            <div class="G">
+              <button class=" text-xl font-semibold rounded-lg text-gray-500  py-4 p-1 ">G</button>
+            </div>
+            <div class="G1">
+              <button  class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8] ">G1</button>
+            </div>
+            <div class="G2">
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8]">G2</button>
+            </div>
+            <div class="G3">
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">G3</button>
+            </div>
+            <div class="G4">
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">G4</button>
+            </div>
+           </div>
+           <!-- 8 seat  -->
+           <div class="flex justify-between lg:gap-5 gap-2 my-1" >
+            <div class="H">
+              <button class=" text-xl font-semibold rounded-lg text-gray-500  py-4 p-1 ">H</button>
+            </div>
+            <div class="H1">
+              <button  class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8] ">H1</button>
+            </div>
+            <div class="H2">
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8]">H2</button>
+            </div>
+            <div class="H3">
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">H3</button>
+            </div>
+            <div class="H4">
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">H4</button>
+            </div>
+           </div>
+           <!-- 9 seat  -->
+           <div class="flex justify-between lg:gap-5 gap-2 my-1" >
+            <div class="I">
+              <button class=" text-xl font-semibold rounded-lg text-gray-500  py-4 p-1 ">H</button>
+            </div>
+            <div class="I1">
+              <button  class="seat text-xl font-semibold   py-2 lg:px-9 px-2 rounded-lg text-gray-500 bg-[#F7F8F8] ">I1</button>
+            </div>
+            <div class="I2">
+              <button class="seat text-xl font-semibold   py-2 lg:px-9 px-2 rounded-lg text-gray-500 bg-[#F7F8F8]">I2</button>
+            </div>
+            <div class="I3">
+              <button class="seat text-xl font-semibold   py-2 lg:px-9 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">I3</button>
+            </div>
+            <div class="I4">
+              <button class="seat text-xl font-semibold   py-2 lg:px-9 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">I4</button>
+            </div>
+           </div>
+           <!-- 10 seat  -->
+           <div class="flex justify-between lg:gap-5 gap-2 my-1" >
+            <div class="J">
+              <button class=" text-xl font-semibold rounded-lg text-gray-500  py-4 p-1 ">J</button>
+            </div>
+            <div class="J1">
+              <button  class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8] ">J1</button>
+            </div>
+            <div class="J2">
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 bg-[#F7F8F8]">J2</button>
+            </div>
+            <div class="J3">
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">J3</button>
+            </div>
+            <div class="J4">
+              <button class="seat text-xl font-semibold   py-2 lg:px-8 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">J4</button>
             </div>
            </div>
 
@@ -290,7 +398,7 @@
               <h3 >Total</h3>
               <h3>BDT <span id="total" class="font-bold pb-6">0</span></h3>
              </div>
-             <div class="join w-full justify-end pb-5">
+             <div id="cup-con" class="join w-full justify-end pb-5">
               <input id="cuponDiscount" class="input input-bordered join-item border-none outline-none w-full" placeholder="Have any copupon?"/>
               <button disabled id="btn-cupon" class="btn join-item rounded-lg bg-[#1DD100] hover:bg-[#1DD100] border-none outline-none text-white">Apply</button>
             </div>
@@ -305,7 +413,7 @@
             <input id="name" type="text" placeholder="Enter your name" class="input input-bordered w-full  mb-6 mt-3" /><br>
 
             <label for="name" class=" font-bold " >Phone Number*</label><br>
-            <input id="phone" type="tel" placeholder="Enter your phone number" class="input input-bordered w-full  mb-6 mt-3" /><br>
+            <input id="phone"  type="tel" placeholder="Enter your phone number" class="input input-bordered w-full  mb-6 mt-3" /><br>
 
             <label for="name" class=" font-bold " >Email ID</label><br>
             <div id="cup-btn">
@@ -326,7 +434,7 @@
                 <p class="py-4 text-xl opacity-90">Shortly you will find a confirmation in your email.</p>
                 </div>
                 <div class="flex justify-center">
-                   <a href="index.html"> <button class="btn bg-[#1cd100f0] text-white px-10 ">Continue</button></a>
+                   <a href="index.html"> <button class="btn bg-[#1DD100] text-white px-10 ">Continue</button></a>
                 </div>
               </div>
             </dialog>
