fixed osme responsive issue

--- a/index.html
+++ b/index.html
@@ -348,16 +348,16 @@
               <button class=" text-xl font-semibold rounded-lg text-gray-500  py-4 p-1 ">H</button>
             </div>
             <div class="I1">
-              <button  class="seat text-xl font-semibold   py-2 lg:px-9 px-2 rounded-lg text-gray-500 bg-[#F7F8F8] ">I1</button>
+              <button  class="seat text-xl font-semibold   py-2 lg:px-9 px-3 rounded-lg text-gray-500 bg-[#F7F8F8] ">I1</button>
             </div>
             <div class="I2">
-              <button class="seat text-xl font-semibold   py-2 lg:px-9 px-2 rounded-lg text-gray-500 bg-[#F7F8F8]">I2</button>
+              <button class="seat text-xl font-semibold   py-2 lg:px-9 px-3 rounded-lg text-gray-500 bg-[#F7F8F8]">I2</button>
             </div>
             <div class="I3">
-              <button class="seat text-xl font-semibold   py-2 lg:px-9 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">I3</button>
+              <button class="seat text-xl font-semibold   py-2 lg:px-9 px-3 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">I3</button>
             </div>
             <div class="I4">
-              <button class="seat text-xl font-semibold   py-2 lg:px-9 px-2 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">I4</button>
+              <button class="seat text-xl font-semibold   py-2 lg:px-9 px-3 rounded-lg text-gray-500 p-4 bg-[#F7F8F8]">I4</button>
             </div>
            </div>
            <!-- 10 seat  -->
@@ -453,7 +453,7 @@
     <div class=" text-white lg:w-4/5 w-full mx-auto p-14">
       <div class="flex lg:flex-row flex-col justify-between  border-b-2 border-dashed border-[#FFFFFF4D] pb-8">
         <div class="space-y-5">
-          <h2 class="text-4xl font-bold ">P-Ticket</h2>
+          <h2 class="text-4xl font-bold ">Ena-Ticket</h2>
           <p class=" opacity-70">Ena-Ticket is a digital platform to make your <br> daily commuting better.</p>
         </div>
         <div class="space-y-5 pt-4">
