--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <head >
       <!-- navigation  -->
-      <nav class="w-11/12 mx-auto py-12">
+      <nav class="w-11/12 mx-auto py-4">
         <div class="navbar bg-base-100">
           <div class="navbar-start">
             <div class="dropdown">
@@ -52,7 +52,7 @@
         <div class="hero-content text-center text-neutral-content">
           <div class="lg:w-4/5 w-full">
             <h1 class=" lg:text-6xl text-3xl font-bold text-white">End-to-End Travel with <br><span class="text-[#1DD100]">Ena Paribahan</span></h1>
-            <p class="mb-5">hey this is ena poribohon online ticket counter .here you can by ticket on online every single persone can by only four ticket</p>
+            <p class="mb-5">hey this is ena poribohon online ticket counter .here you can by ticket on online. every single persone can by only four ticket</p>
             <a href="#selectYouredSeat"><button class="btn font-bold bg-[#1DD100] hover:bg-[#1DD100] border-none text-white">Buy Tickets</button></a>
           </div>
         </div>
